openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Z5.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

interface Foo {}

@interface Colored extends Foo {
}
